--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <h1>{{ title }}</h1>
 <p>This is a bare-bones template.</p>
 <ul>
-{% for person in people %}
-  <li>{{ person.name }}</li>
+{% for book in books %}
+  <li>{{ book.author + ": " + book.title }}</li>
 {% endfor %}
 </ul>
