up to add a single-user route

--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
     
       <!-- display tweets here -->
       {% for tweet in tweets %}
-        <li>{{tweet.content}}</li>
+        <li>{{tweet.name}} <br>{{tweet.content}}</li>
       {% endfor %}
       
     </div>
